# EventHub

./: .gitignore  README.md  pyproject.toml  test_main.http
app/: Dockerfile  main.py
app/api/: __init__.py
app/api/routes/: health.py
app/core/: config.py  logger.py  metrics.py  request_id.py
app/docere/eventhub/v1/: events_pb2_grpc.py
app/graphql/: schema.py
app/graphql_api/: schema.py
app/grpc/: server.py
app/storage/clickhouse/: client.py
deploy/: docker-compose.yml
docere/eventhub/v1/: events_pb2_grpc.py
docs/: architecture.md  dev.md  graphql.md  setup.md
tests/: test_health.py
tools/: grpc_send_one.py
