[project]
name = "eventhub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiokafka>=0.12.0",
    "clickhouse-connect>=0.8.18",
    "fastapi>=0.116.1",
    "orjson>=3.11.3",
    "prometheus-client>=0.22.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.15.0",
    "python-json-logger>=3.3.0",
    "sentry-sdk>=2.37.1",
    "strawberry-graphql>=0.282.0",
    "uvicorn[standard]>=0.35.0",
]

[tool.uv]
managed = true
